--- a/templates/index.html
+++ b/templates/index.html
@@ -72,5 +72,34 @@
             </div>
         </div>
     </div>
+    <div class="fr-container">
+        <div class="fr-grid-row fr-grid-row--gutters">
+            <h2 class="fr-mb-3w">Nos utilisateurs en parlent</h2>
+            <div class="fr-container">
+                <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
+                    <div class="fr-col-lg-6 fr-col-12 fr-pr-4w">
+                        <iframe class="fr-col-12" style="height:300px" type="text/html"  allowfullscreen title="Video Instructeur" src="https://www.dailymotion.com/embed/video/x8fkp4y" title="Présentation instructeur" nonce="{{request.csp_nonce}}"> </iframe>
+                        <div class="text--center fr-py-3w fr-px-5w">
+                            <div class="fr-h6 text-title-blue-france">Pour les instructeurs</div>
+                            <p><strong>"Apilos nous aide à prioriser notre travail et à instruire les conventions les plus urgentes"</strong></p>
+                            <div><strong>Philippe Pusic</strong>, Instructeur</div>
+                            <div>APM Métropole Bouche du Rhône</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="fr-container">
+            <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
+                <div class="text--center fr-col-lg-4 fr-col-md-6 fr-col-12">
+                    <img src="/static/img/sabrina_derdiche.jpg" class="apilos-verbatim-img" alt="Sabrina Derdiche">
+                    <div class="apilos-verbatim-text fr-mb-2w"><strong>"L’outil est intuitif"</strong></div>
+                    <div class="apilos-verbatim-text"><strong>Sabrina DERDICHE</strong>, Instructrice ANRU et Conventionnement APL</div>
+                    <div class="apilos-verbatim-text"><em>DDT 54 Meurthe-et-Moselle</em></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
