--- a/templates/settings/edit_bailleur.html
+++ b/templates/settings/edit_bailleur.html
@@ -25,6 +25,19 @@
 
                                 {% include "common/form/input_text.html" with form_input=form.nom object_field="bailleur__nom__"|add:form.uuid.value %}
 
+                                {% if request.user.is_superuser or request.user.administrateur_de_compte %}
+                                    {% if form.bailleur.field.choices|length > 0 and bailleur.bailleurs.count == 0 %}
+                                        {% include "common/form/input_select.html" with form_input=form.bailleur with_empty_option=True %}
+                                    {% endif %}
+                                {% else %}
+                                    {% include "common/form/input_select.html" with form_input=form.bailleur editable=False %}
+                                {% endif %}
+                                {% if form.bailleur.value %}
+                                    <div class="fr-mb-3w">
+                                        <a href="{% url 'settings:edit_bailleur' bailleur_uuid=form.bailleur.value %}"> Éditer le bailleur parent</a>
+                                    </div>
+                                {% endif %}
+
                                 {% include "common/form/input_select.html" with form_input=form.type_bailleur editable=request.user.is_superuser %}
 
                                 <div class="fr-mb-2w">
@@ -73,10 +86,12 @@
                             Enregistrer
                         </button>
                     </form>
-
+                    {% if bailleur.bailleurs.count > 0 %}
+                        {% include 'settings/bailleur_list_table.html' with count=bailleur.bailleurs.count total_items=bailleur.bailleurs.count items=bailleur.bailleurs.all%}
+                    {% endif %}
                     <h3 class="fr-mt-3w">Utilisateurs du bailleur ‹‹{{ form.nom.value }}››</h3>
 
-                    {% include 'settings/user_list.html' with users=paginated_users read_only=True %}
+                    {% include 'settings/user_list.html' with users=user_list.paginated_users total_users=user_list.total_users read_only=True %}
 
                 </div>
             </div>
