--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -53,7 +53,7 @@
                                                     <option
                                                         value="{{lot.uuid}}"
                                                         {% if lot.uuid|stringformat:"s"  == form.lot.value %}selected{% endif %}
-                                                        {% if lot.convention_set.all and lot.uuid|stringformat:"s"  != form.lot.value %}disabled="disabled"{% endif %}>
+                                                        {% if lot.conventions.all and lot.uuid|stringformat:"s"  != form.lot.value %}disabled="disabled"{% endif %}>
                                                         {{ lot.programme.ville}} - {{ lot.programme.nom }} - {{lot.nb_logements}} lgts - {{ lot.get_type_habitat_display }} - {{ lot.financement }}
                                                     </option>
                                                 {% endfor %}
