--- a/templates/settings/edit_administration.html
+++ b/templates/settings/edit_administration.html
@@ -48,7 +48,7 @@
                         </button>
                     </form>
 
-                    <h3 class="fr-mt-3w">Utilisateurs du bailleur ‹‹{{ form.nom.value }}››</h3>
+                    <h3 class="fr-mt-3w">Utilisateurs de l'administration ‹‹{{ form.nom.value }}››</h3>
                     {% include 'settings/user_list.html' with users=paginated_users read_only=True %}
                 </div>
             </div>
