--- a/templates/conventions/actions/back_to_instruction.html
+++ b/templates/conventions/actions/back_to_instruction.html
@@ -2,9 +2,9 @@
 
 {% if convention|display_back_to_instruction:request %}
 
-    <div class="fr-col-12">
-        <div class="block--row-strech fr-my-2w">
-            <div class="block--row-strech-1 fr-my-2w fr-mr-6w">
+    <div class="fr-col-12 fr-my-2w">
+        <div class="block--row-strech">
+            <div class="block--row-strech-1 fr-mr-6w">
                 <p class="fr-alert__title">
                     Repasser {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %} au statut "A instruire"
                 </p>
