--- a/templates/conventions/selection_from_zero.html
+++ b/templates/conventions/selection_from_zero.html
@@ -6,6 +6,72 @@
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
+        <div class="fr-container">
+            <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-col-12 fr-my-5w">
+                    <h1 class="fr-h2">Convention sans agrément : créez votre convention à partir de zéro</h1>
+                    <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
+                        <p class="fr-alert__title">Vous n'avez pas trouvé votre programme dans la liste déroulante des programmes et financements connus de l'administration</p>
+                        <p>Vous avez la possibilité de créer une convention en saisissant les données du programme et du financement dans le formulaire ci-dessous.</p>
+                        <p><i>
+                            Il est toute fois conseillé de créer votre convention à partir des programmes et financements connus de l'administration, cela évite la double saisies.
+                            Vous pouvez vérifier et accéder à la liste en cliquant sur le bouton ci-dessous :
+                        </i></p>
+                        <a class="fr-btn fr-btn--secondary" href="{% url 'conventions:selection' %}">
+                            Retour à la sélection d'une convention
+                        </a>
+                    </div>
+                    <form method="post" action="">
+                        {% csrf_token %}
+                        <div class="fr-col-12">
+                            {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 mandatory_input=True %}
+
+                            {% include "common/form/input_select.html" with form_input=form.administration without_empty_option=form.administration.field.choices|length_is:1 mandatory_input=True %}
+
+                            {% include "common/form/input_text.html" with form_input=form.nom  mandatory_input=True %}
+
+                            <div class="fr-grid-row fr-grid-row--gutters">
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
+                                    {% include "common/form/input_number.html" with form_input=form.nb_logements mandatory_input=True %}
+                                </div>
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
+                                    {% include "common/form/input_select.html" with form_input=form.type_habitat mandatory_input=True %}
+                                </div>
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
+                                    {% include "common/form/input_select.html" with form_input=form.financement mandatory_input=True %}
+                                </div>
+                            </div>
+
+                            <div class="fr-grid-row fr-grid-row--gutters">
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                    {% include "common/form/input_text.html" with form_input=form.code_postal mandatory_input=True %}
+                                </div>
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                    {% include "common/form/input_text.html" with form_input=form.ville mandatory_input=True %}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-button-footer fr-col-md-12 fr-py-5w">
+                            {% include "common/button/next_and_save.html" %}
+                            <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
+                                Revenir à la liste des conventions
+                            </a>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+
+
+
+
+{% comment %}
+
+<div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html"%}
         <div class="fr-container">
             <form method="post" action="{% if redirect_action %}{{ redirect_action }}{% endif %}">
@@ -84,32 +150,7 @@
                                             });
                                         </script>
                                         <div id='programme_creation' {% if form.existing_programme.value != 'creation' %}hidden{% endif %}>
-                                            {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 mandatory_input=True %}
 
-                                            {% include "common/form/input_select.html" with form_input=form.administration without_empty_option=form.administration.field.choices|length_is:1 mandatory_input=True %}
-
-                                            {% include "common/form/input_text.html" with form_input=form.nom  mandatory_input=True %}
-
-                                            <div class="fr-grid-row fr-grid-row--gutters">
-                                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
-                                                    {% include "common/form/input_number.html" with form_input=form.nb_logements mandatory_input=True %}
-                                                </div>
-                                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
-                                                    {% include "common/form/input_select.html" with form_input=form.type_habitat mandatory_input=True %}
-                                                </div>
-                                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
-                                                    {% include "common/form/input_select.html" with form_input=form.financement mandatory_input=True %}
-                                                </div>
-                                            </div>
-
-                                            <div class="fr-grid-row fr-grid-row--gutters">
-                                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                                    {% include "common/form/input_text.html" with form_input=form.code_postal mandatory_input=True %}
-                                                </div>
-                                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                                    {% include "common/form/input_text.html" with form_input=form.ville mandatory_input=True %}
-                                                </div>
-                                            </div>
 
                                         </div>
 
@@ -130,4 +171,4 @@
             </form>
         </div>
     </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
