--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% load custom_filters %}
 
 {% if convention %}
@@ -29,10 +30,13 @@
     <div>
         <div class="fr-container fr-pt-2w">
             {% if convention.ecolo_reference %}
-                <div class="fr-alert fr-alert--info">
-                    <h3 class="fr-alert__title">Issue d'Ecoloweb</h3>
-                    <p>Les données de cette convention ont été importées depuis la plateforme Ecoloweb</p>
+
+                <div role="alert" class="fr-col-12 fr-mb-3w apilos-alert apilos-alert-ecoloweb">
+                    <p class="fr-text--lg">Cette convention a été récupérée automatiquement depuis <span class="fr-text--bold">Ecoloweb</span></p>
+                    <p>Vous pouvez compléter les informations incomplètes</p>
                 </div>
+
+                <hr class="fr-col-12 fr-my-3w">
             {% endif %}
 
 
