--- a/templates/conventions/selection_from_zero.html
+++ b/templates/conventions/selection_from_zero.html
@@ -18,30 +18,40 @@
                     <form method="post" action="">
                         {% csrf_token %}
                         <div class="fr-col-12">
-                            {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 mandatory_input=True %}
+                            {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 %}
 
-                            {% include "common/form/input_select.html" with form_input=form.administration without_empty_option=form.administration.field.choices|length_is:1 mandatory_input=True %}
-
-                            {% include "common/form/input_text.html" with form_input=form.nom  mandatory_input=True %}
+                            {% include "common/form/input_select.html" with form_input=form.administration without_empty_option=form.administration.field.choices|length_is:1 %}
 
                             <div class="fr-grid-row fr-grid-row--gutters">
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
-                                    {% include "common/form/input_number.html" with form_input=form.nb_logements mandatory_input=True %}
+                                <div class="fr-col-md-12 fr-col-lg-8 fr-mb-2w">
+                                    {% include "common/form/input_text.html" with form_input=form.nom %}
                                 </div>
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
-                                    {% include "common/form/input_select.html" with form_input=form.type_habitat mandatory_input=True %}
+                                <div class="fr-col-md-12 fr-col-lg-4 fr-mb-2w">
+                                    {% include "common/form/input_text.html" with form_input=form.numero_galion %}
                                 </div>
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
-                                    {% include "common/form/input_select.html" with form_input=form.financement mandatory_input=True %}
+                            </div>
+
+                            <div class="fr-grid-row fr-grid-row--bottom fr-grid-row--gutters">
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                    {% include "common/form/input_select.html" with form_input=form.nature_logement %}
+                                </div>
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                    {% include "common/form/input_number.html" with form_input=form.nb_logements %}
+                                </div>
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                    {% include "common/form/input_select.html" with form_input=form.type_habitat %}
+                                </div>
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                    {% include "common/form/input_select.html" with form_input=form.financement %}
                                 </div>
                             </div>
 
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.code_postal mandatory_input=True %}
+                                    {% include "common/form/input_text.html" with form_input=form.code_postal %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.ville mandatory_input=True %}
+                                    {% include "common/form/input_text.html" with form_input=form.ville %}
                                 </div>
                             </div>
                         </div>
