--- a/templates/conventions/selection_from_db.html
+++ b/templates/conventions/selection_from_db.html
@@ -10,27 +10,11 @@
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-12 fr-my-5w">
                     <h1 class="fr-h2">Sélectionnez votre programme et son financement</h1>
-                    <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
-                        <p class="fr-alert__title">Vous êtes sur le point de créer une convention à partir d'un programme et d'un financement</p>
-                        <p>Vous trouverez dans la liste ci-dessous tous les programmes et leurs financements connus par l'administration.</p>
-                        <p><em>
-                            Si vous ne trouvez pas le programme dans la liste déroulante, vous avez la possibilité de créer une convention en resaisissant vous même les informations liées au programme.
-                            Dans ce cas, nous vous prions de cliquer sur le bouton ci-dessous :
-                        </em></p>
-                        <a class="fr-btn fr-btn--secondary" href="{% url 'conventions:selection_from_zero' %}">
-                            Créer une convention depuis zéro
-                        </a>
-                    </div>
-                    <details>
-                        <summary class="text-title-blue-france fr-text--xs"><u>Comment afficher uniquement les programmes de mes départements ?</u></summary>
-                        <div class="fr-text--xs">
-                            <div>Vous pouvez choisir vos zones et départements d’intervention dans votre <a class="fr-link fr-text--xs" href="{% url 'settings:profile' %}">espace personnel.</a></div>
-                            <div><a href="https://docs.apilos.beta.gouv.fr/apres-la-validation-de-la-convention/bailleurs-parametres/comment-afficher-mes-programmes-par-departement" target="_blank" rel="noopener" class="fr-link fr-text--xs">Plus d’informations sur les paramètres de votre compte</a></div>
-                        </div>
-                    </details>
                     <form method="post" action="">
                         {% csrf_token %}
                         <div class="fr-col-12">
+                            <p>Vous trouverez dans la liste ci-dessous tous les programmes et leurs financements connus par l'administration.</p>
+
                             <div class="fr-mt-1w block--row-strech" id="{{form.lot.id_for_label}}_div">
                                 <select
                                     class="fr-select {% if form.lot.errors %}fr-select--error{% endif %}"
@@ -53,12 +37,29 @@
                                 </p>
                             {% endfor %}
                         </div>
+                        <details class='fr-mt-3w'>
+                            <summary class="fr-mb-1w text-title-blue-france fr-text--s"><u>Comment afficher uniquement les programmes de mes départements ?</u></summary>
+                            <div class="fr-text--s">
+                                <div>Vous pouvez choisir vos zones et départements d’intervention dans votre <a class="fr-link fr-text--s" href="{% url 'settings:profile' %}">espace personnel.</a></div>
+                                <div><a href="https://docs.apilos.beta.gouv.fr/apres-la-validation-de-la-convention/bailleurs-parametres/comment-afficher-mes-programmes-par-departement" target="_blank" rel="noopener" class="fr-link">Plus d’informations sur les paramètres de votre compte</a></div>
+                            </div>
+                        </details>
 
                         <div class="form-button-footer fr-col-md-12 fr-py-5w">
                             {% include "common/button/next_and_save.html" %}
                             <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
                                 Revenir à la liste des conventions
                             </a>
+                        </div>
+
+                        <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
+                            <p class="fr-alert__title">Vous ne trouvez pas votre programme et son financement ?</p>
+                            <p><em>
+                                Vous avez la possibilité de <a class="fr-link" href="{% url 'conventions:selection_from_zero' %}">
+                                    créer une convention à partir de zéro
+                                </a> en resaisissant vous même les informations liées au programme.
+                            </em></p>
+
                         </div>
 
                     </form>
