--- a/templates/conventions/selection_from_zero.html
+++ b/templates/conventions/selection_from_zero.html
@@ -10,7 +10,7 @@
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-12 fr-my-5w">
                     <h1 class="fr-h2">Convention sans agrément : créez votre convention à partir de zéro</h1>
-                    <p>Vous êtes sur le point de créer une convention en ressaisissant les données du programme et du financement.
+                    <p>Vous êtes sur le point de créer une convention en re-saisissant les données du programme et du financement.
                         Il est toutefois préférable de créer votre convention à partir des
                         <a class="fr-link" href="{% url 'conventions:selection' %}">
                             programmes et financements connus de l'administration
