--- a/templates/conventions/selection_from_db.html
+++ b/templates/conventions/selection_from_db.html
@@ -59,7 +59,7 @@
                             <p><em>
                                 Vous avez la possibilité de <a class="fr-link" href="{% url 'conventions:selection_from_zero' %}">
                                     créer une convention à partir de zéro
-                                </a> en resaisissant vous même les informations liées au programme.
+                                </a> en re-saisissant vous même les informations liées au programme.
                             </em></p>
 
                         </div>
