--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -20,12 +20,17 @@
                                 <p class="apilos-subtitle">{{conventions.total_conventions}} convention{{ conventions.total_conventions|pluralize }} liée{{ conventions.total_conventions|pluralize }} à votre bailleur trouvée{{ conventions.total_conventions|pluralize }} dans APiLos</p>
                             </div>
                             {% if not CERBERE_AUTH %}
-                                <div>
+                                <div class="fr-mr-3w">
                                     <a class="fr-btn" href="{% url 'conventions:selection' %}">
                                         <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
                                     </a>
                                 </div>
                             {% endif %}
+                            <div>
+                                <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
+                                    <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un nouvel avenant
+                                </a>
+                            </div>
                         {% elif request|is_instructeur or request.user.is_superuser %}
                             <div class="block--row-strech-1">
                                 <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
