--- a/templates/settings/users.html
+++ b/templates/settings/users.html
@@ -24,13 +24,14 @@
                         {% endfor %}
                     {% endif %}
 
+                    {% if request.user.is_staff %}
                     {# Button link to import bailleur users page #}
                     <div class="fr-grid-row fr-grid-row--right fr-my-3w">
                         <a class="fr-btn" href="{% url 'settings:import_bailleur_users' %}">
-                            <span class="fr-icon-upload-line fr-mr-1w" aria-hidden="true"></span>Importer un listing utilisateur bailleur
+                            <span class="fr-icon-todo-line fr-mr-1w" aria-hidden="true"></span>Importer un listing utilisateur bailleur
                         </a>
                     </div>
-
+                    {% endif %}
 
                     {% include 'settings/user_list.html' with users=paginated_users %}
 
