Download an example file

--- a/templates/settings/import_bailleur_users.html
+++ b/templates/settings/import_bailleur_users.html
@@ -35,6 +35,8 @@
                             >
                                 Téléverser le fichier de listing bailleur
                             </button>
+
+                            <a href="{% static '/files/listing_bailleur.xlsx' %}" download="listing_bailleur">Télécharger un exemple</a>
                         </div>
 
                         <hr class="fr-col-12 fr-my-3w">
