--- a/templates/conventions/search_for_avenant.html
+++ b/templates/conventions/search_for_avenant.html
@@ -7,7 +7,7 @@
 {% block content %}
     on recherche ici
     <div class="fr-mr-3w">
-        <a class="fr-btn" href="{% url 'conventions:search_for_avenant_result' year=2022 dpt=44 num=0213 %}">
+        <a class="fr-btn" href="{% url 'conventions:search_for_avenant_result' %}?departement=29&annee=2022&num=22">
             <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Commencer
         </a>
     </div>
