--- a/templates/conventions/actions/generate_convention.html
+++ b/templates/conventions/actions/generate_convention.html
@@ -6,7 +6,7 @@
             Télécharger le projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %} (en docx)
         </p>
         <div class="block--row-strech">
-            {% if not convention.type1and2_configuration_not_needed and not convention.is_avenant %}
+            {% if convention|display_deactivated_because_type1and2_config_is_needed %}
                 <div class="block--row-strech-1 fr-mr-6w">
                     <p class="fr-mb-0">
                         Avant de pouvoir générer un document de convention, il vous faut préciser le type de convention I ou II et les options associées dans la section <strong>Convention de type I & II ci-dessus.</strong>
